kube-example/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVWCtISHl2SFBHR0RsaHorV2h5VGxoUnArNUswd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXpNRGt5TURFM01EWXhNVm9ZRHpJeQpPVGN3TnpBMU1UY3dOakV4V2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUN0amRDdUQxeHZqL2txQUZicVNKcmt3bGxMVHJiUkdpZlMKcXViRmZjZDBxZXVrRHFlb3Q0dTNsWkJrVGtRd3NQNEdrbmMwSU1ZRWI4WmlZVXYzUm9ZeVFIKzZ4ajZDUmtuNApRQTZBREkrTkl2 [...]
      service:
        namespace: opa
        name: opa
    admissionReviewVersions: ["v1"]
    sideEffects: None
